# ASMstatic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  gpio_functions.s
src/: main.rs  prettier.rs
