[package]
name = "ASMstatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ASMformatter"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "ASMstatic"
path = "src/main.rs"

[dependencies]
regex = { version = "1.11.1", features = [] }
libc = "1.0.0-alpha.1"

[build-dependencies]
cbindgen = "0.28.0"
